--- a/ShoppingNightMongo/appsettings.json
+++ b/ShoppingNightMongo/appsettings.json
@@ -3,8 +3,9 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ShoppingNightDb",
     "CategoryCollectionName": "Categories",
-    "ProductCollectionName": "Products"
-  } ,
+    "ProductCollectionName": "Products",
+    "CustomerCollectionName": "Customers"
+  },
 
   "Logging": {
     "LogLevel": {
